--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
   like_button: any
+  path: ^1.9.0
+  path_provider: ^2.1.2
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
