--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path: ^1.9.0
   path_provider: ^2.1.2
   sqflite: ^2.3.2
+  firebase_core: ^2.27.1
 
 dev_dependencies:
   flutter_test:
